--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,7 @@
     "icons": {
       "48": "assets/48.png"
     },
+    "permissions": ["storage"],
 
     "browser_action": {
       "default_popup": "popup/popup.html"
