--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "icons": {
       "48": "assets/48.png"
     },
-    "permissions": ["storage"],
+    "permissions": ["storage", "tabs"],
 
     "browser_action": {
       "default_popup": "popup/popup.html"
